# TravelPlannerLLMRAGMCP

./: .env.example  .gitignore  README.md  google_hotels.json  main.py  main_2.py  pyproject.toml  requirements.txt  state_management_flow.mermaid  test.py  webui-requirements.txt
LLM/: gemini_model.py  llm_mode.py  orchestrator.py  output_2.csv  output_filtered.csv  qwen.py  test_lmstudio.py
MCP/: mcp_mock.py  mcp_mock_2.py
MCP/BMKG/: bmkg_beautifier.py  location_resolver.py  weather_handler.py
MCP/Flight/: amadeus_auth.py  flight_beautifier.py  flight_handler.py  flight_param_extractor.py  flight_search.py  mcp_flight.py  test_data.json
MCP/Hotel/: hotel_handler.py  hotel_param_extractor.py  hotel_search.py
RAG/: benchmark_detail.csv  benchmark_summary.csv  milvus_lite_detail.csv  milvus_lite_summary.csv  milvus_rag_benchmark.py  rag_benchmark.py  rag_pipeline.py  rag_query.py  rag_setup.py  rag_sum.ipynb  research_agent.py
app/: main.py  run_batch.py  test-langfuse.py  test_batch.py  test_run_batch.py
app/api/: chat.py
app/core/: dependencies.py  sessions.py  settings.py
app/eval/: batch_chat_service.py  batch_orchestrator.py
app/schemas/: actions.py  (+1 more)
data/: kode-wilayah.csv
evals/: batch_orchestrator.py  context_helpers.py  convert_jsonl_to_readable.py  generate_excel_stats.py  generate_excel_stats_v2.py  prompts.py  run_context_fetch.py  run_inference.py  run_scoring.py  utils_context.py  utils_scoring.py
router/: langchain_router.py  langchain_router_2.py  router.py  sessions.py
utils/: decision_routing.py  llm_mode.py  mcp_router.py  reference_detector.py  return_text_bmkg.py
(+60 files in other folders)
