[project]
name = "travelplannerllmragmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.0",
    "langfuse>=4.3.1",
    "openai>=2.32.0",
    "peft>=0.19.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]
