[project]
name = "travelplannerllmragmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.3.1",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "serpapi>=1.0.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]
